// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography snapshot tests renders with expected children 1`] = `
<div>
  <p
    class="font-inter text-sm sm:text-base"
  >
    Text to display
  </p>
</div>
`;

exports[`Typography snapshot tests renders with specified custom className 1`] = `
<div>
  <p
    class="font-inter text-sm sm:text-base custom-class"
  >
    Text to display
  </p>
</div>
`;

exports[`Typography snapshot tests renders with specified element 1`] = `
<div>
  <h1
    class="font-inter text-sm sm:text-base"
  >
    Text to display
  </h1>
</div>
`;

exports[`Typography snapshot tests renders with specified variant 1`] = `
<div>
  <p
    class="font-inter text-2xl sm:text-3xl font-medium"
  >
    Text to display
  </p>
</div>
`;

exports[`Typography snapshot tests renders with the "bold" class when "bold" prop is true 1`] = `
<div>
  <p
    class="font-inter text-sm sm:text-base font-medium"
  >
    Text to display
  </p>
</div>
`;

exports[`Typography snapshot tests renders with the "thin" class when "thin" prop is true 1`] = `
<div>
  <p
    class="font-inter text-sm sm:text-base font-light"
  >
    Text to display
  </p>
</div>
`;
